--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ sudo: required
 install:
   - wget https://releases.hashicorp.com/terraform/0.11.5/terraform_0.11.5_linux_amd64.zip
   - unzip terraform_0.11.5_linux_amd64.zip
-  - mv terraform /usr/local/bin
+  - sudo mv terraform /usr/local/bin
 
 script:
   - terraform init
