--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install:
   - wget https://releases.hashicorp.com/terraform/0.11.5/terraform_0.11.5_linux_amd64.zip
   - unzip terraform_0.11.5_linux_amd64.zip
   - sudo mv terraform /usr/local/bin
-  - apt-get update && apt-get install jq
+  - sudo apt-get update && sudo apt-get install jq
 
 post_install:
   - sed -i "s/\${file(\"\/home\/user\/.ssh\/id_rsa\")\}/\$\{var.private_key}/g" master.tf
